reworked server registration and login changed database entities via ER-Diagram added error handling to login and registration controller changed dtos