@@ -2,15 +2,13 @@ package com.example.monicio.Services;
 
 
 import com.example.monicio.Config.JWT.JWTUtil;
-import com.example.monicio.Controllers.AuthController;
-import com.example.monicio.DTO.UserDTO;
-import com.example.monicio.DTO.ValidateDTO.RegisterRequestDTO;
+import com.example.monicio.DTO.*;
 import com.example.monicio.Models.ActivationToken;
-import com.example.monicio.Models.Role;
 import com.example.monicio.Models.User;
 import com.example.monicio.Repositories.ActivationTokenRepository;
 import com.example.monicio.Repositories.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -24,25 +22,25 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.ObjectUtils;
+import org.springframework.validation.BindingResult;
+import org.springframework.validation.FieldError;
 
 import javax.mail.MessagingException;
-import java.security.Principal;
+import java.util.Collections;
 import java.util.Date;
-import java.util.List;
-import java.util.Set;
 import java.util.UUID;
 
 @Service
 @Transactional
 public class UserService implements UserDetailsService {
     @Autowired
-    private  UserRepository userRepo;
+    private UserRepository userRepository;
     @Autowired
     private AuthenticationManager authenticationManager;
     @Autowired
-    private  PasswordEncoder passwordEncoder;
+    private PasswordEncoder passwordEncoder;
     @Autowired
-    private  JWTUtil jwtUtil;
+    private JWTUtil jwtUtil;
 
     @Autowired
     private EmailService emailService;
@@ -50,55 +48,93 @@ public class UserService implements UserDetailsService {
     @Autowired
     private ActivationTokenRepository activationTokenRepository;
 
-    public void save(User user){
-        userRepo.save(user);
-//        try {
-//            createActivationCode(user.getEmail());
-//        } catch (MessagingException e) {
-//            throw new RuntimeException(e);
-//        }
+    //    public void save(User user){
+//        userRepository.save(user);
+////        try {
+////            createActivationCode(user.getEmail());
+////        } catch (MessagingException e) {
+////            throw new RuntimeException(e);
+////        }
+//    }
+    public User save(User user) {
+        return userRepository.save(user);
     }
-    public boolean existsByUserEmail(String email){
-        return userRepo.findUserByEmail(email).isPresent();
+
+    public boolean existsByEmail(String email) {
+        return userRepository.existsByEmail(email);
     }
+
+    public boolean existsByUsername(String username) {
+        return userRepository.existsByUsername(username);
+    }
+
+    public User findUserByUsername(String username) {
+        return userRepository.findUserByUsername(username).orElse(null);
+    }
+
+    public User findUserByEmail(String email) {
+        return userRepository.findUserByUsername(email).orElse(null);
+    }
+
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        return userRepo.findByUsername(username).orElseThrow(() -> new UsernameNotFoundException("No user with username = " + username));
+        return userRepository.findUserByUsername(username).orElseThrow(() -> new UsernameNotFoundException("No user with username = " + username));
     }
 
-    public void registerUser(RegisterRequestDTO registerRequestDTO){
+    public UserInfoDTO mapUserToInfoDTO(User user) {
+        return UserInfoDTO.builder()
+                .username(user.getUsername())
+                .email(user.getEmail())
+                .name(user.getName())
+                .surname(user.getSurname())
+                .roles(user.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList())
+                .build();
+    }
+
+    public ResponseEntity<?> validateRegister(RegisterRequestDTO registerRequestDTO, BindingResult bindingResult) {
+        if (!registerRequestDTO.getPassword().equals(registerRequestDTO.getPasswordConfirm())) {
+            bindingResult.addError(new FieldError("user", "passwordConfirm", "Пароли не совпадают"));
+        }
+        if (existsByUsername(registerRequestDTO.getUsername())) {
+            bindingResult.addError(new FieldError("user", "username", "Пользователь с таким никнеймом уже существует"));
+        }
+        if (existsByEmail(registerRequestDTO.getEmail())) {
+            bindingResult.addError(new FieldError("user", "email", "Пользователь с такой почтой уже существует"));
+        }
+        if (bindingResult.hasErrors()) {
+            return new ResponseEntity<>(bindingResult.getFieldErrors(), HttpStatus.CONFLICT);
+        }
+        registerUser(registerRequestDTO);
+        return ResponseEntity.ok(new RegisterResponseDTO("Пользователь зарегистрирован!"));
+    }
+
+    public void registerUser(RegisterRequestDTO registerRequestDTO) {
         save(User.builder()
+                .username(registerRequestDTO.getUsername())
                 .email(registerRequestDTO.getEmail())
-                .username(registerRequestDTO.getUserName())
+                .name(registerRequestDTO.getName())
+                .surname(registerRequestDTO.getSurname())
                 .password(passwordEncoder.encode(registerRequestDTO.getPassword()))
-                .authorities( Set.of(Role.ROLE_ADMIN))
-                .active(false).build()
-        );
+                .authorities(Collections.singleton(registerRequestDTO.getRole()))
+                .active(false)
+                .build());
     }
 
-    public ResponseEntity<?> loginUser(UserDTO userDto){
+    public ResponseEntity<?> loginUser(LoginRequestDTO loginRequestDTO) {
         final Authentication authentication = authenticationManager.authenticate(
-                new UsernamePasswordAuthenticationToken(userDto.getUserName(), userDto.getPassword()));
+                new UsernamePasswordAuthenticationToken(loginRequestDTO.getUsername(), loginRequestDTO.getPassword()));
         SecurityContextHolder.getContext().setAuthentication(authentication);
-
-        User user = (User) authentication.getPrincipal();
-        user.setEmail(userDto.getEmail());
-        String jwt = jwtUtil.generateToken(user.getUsername());
-
-        List<String> authorities = user.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList();
-        return  ResponseEntity.ok(new AuthController.JwtResponse(jwt, user.getId(),user.getEmail(), user.getUsername(), authorities));
+        User user = findUserByUsername(loginRequestDTO.getUsername());
+        LoginResponseDTO loginResponseDTO = LoginResponseDTO.builder()
+                .jwt(jwtUtil.generateToken(user.getUsername()))
+                .userInfoDTO(mapUserToInfoDTO(user))
+                .build();
+        return ResponseEntity.ok(loginResponseDTO);
     }
 
-    public ResponseEntity<?> collectUserData(Principal user){
-        User userObj=(User) loadUserByUsername(user.getName());
-
-        return ResponseEntity.ok(
-                UserDTO.builder()
-                .userName(userObj.getUsername())
-                .email(userObj.getEmail())
-                .Roles(userObj.getAuthorities().toArray())
-                .build()
-        );
+    public ResponseEntity<?> collectUserData(Authentication authentication) {
+        User user = (User) loadUserByUsername(authentication.getName());
+        return ResponseEntity.ok(mapUserToInfoDTO(user));
     }
 
 
@@ -112,9 +148,6 @@ public class UserService implements UserDetailsService {
         save(user);
     }
 
-    public User findUserByEmail(String email) {
-        return userRepo.findUserByEmail(email).get();
-    }
 
     public void createActivationCode(String userEmail) throws MessagingException {
         User user = findUserByEmail(userEmail);
@@ -125,7 +158,7 @@ public class UserService implements UserDetailsService {
         if (!ObjectUtils.isEmpty(user.getEmail())) {
             String message = "Привет, " + user.getUsername() + "!" +
                     " для активации аккаунта перейдите <a href='http://localhost:8080/activate/" + token + "'>по ссылке для подтверждения почты</a>"
-                    +"а затем продолжите логин <a href='http://localhost:3000/login/'>по ссылке</a>";
+                    + "а затем продолжите логин <a href='http://localhost:3000/login/'>по ссылке</a>";
             emailService.sendSimpleMessage(user.getEmail(), message);
         }
     }
